Fix profile photo: Make it perfectly circular with proper cropping

--- a/_sass/layout/_sidebar.scss
+++ b/_sass/layout/_sidebar.scss
@@ -95,7 +95,12 @@
 
   img {
     max-width: 175px;
+    max-height: 175px;
+    width: 175px;
+    height: 175px;
     border-radius: 50%;
+    object-fit: cover;
+    object-position: center;
 
     @include breakpoint($large) {
       padding: 5px;
